compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__conditional_snapshots@unless_empty.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "unless true { }"
---
[
    Statement {
        id: 0,
        kind: Unless(
            Unless {
                id: 0,
                cases: [],
                location: <internal>:0:15,
            },
        ),
        location: <internal>:0:15,
    },
]
