compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__construction_snapshots@empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "Foo { };"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        1,
                    ),
                },
                kind: Construct(
                    Construct {
                        id: ExpressionId {
                            def: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            index: Idx(
                                1,
                            ),
                        },
                        path: Path {
                            root: [],
                            name: Type {
                                name: Identifier {
                                    name: "Foo",
                                    location: <internal>:0:3,
                                },
                                type_arguments: [],
                                location: <internal>:0:3,
                            },
                            location: <internal>:0:3,
                        },
                        fields: [],
                        location: <internal>:0:8,
                    },
                ),
                location: <internal>:0:8,
            },
        ),
        location: <internal>:0:8,
    },
]
