compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__construction_snapshots@empty_self.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "Self { };"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        1,
                    ),
                },
                kind: Construct(
                    Construct {
                        id: ExpressionId {
                            def: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            index: Idx(
                                1,
                            ),
                        },
                        path: Path {
                            root: [],
                            name: Type {
                                name: Identifier {
                                    name: "Self",
                                    location: <internal>:0:4,
                                },
                                type_arguments: [],
                                location: <internal>:0:4,
                            },
                            location: <internal>:0:4,
                        },
                        fields: [],
                        location: <internal>:0:9,
                    },
                ),
                location: <internal>:0:9,
            },
        ),
        location: <internal>:0:9,
    },
]
