compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__construction_snapshots@trailing_comma.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "Foo { bar: 0, };"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                kind: Construct(
                    Construct {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        path: Path {
                            root: [],
                            name: Type {
                                name: Identifier {
                                    name: "Foo",
                                    location: <internal>:0:3,
                                },
                                type_arguments: [],
                                location: <internal>:0:3,
                            },
                            location: <internal>:0:3,
                        },
                        fields: [
                            Field {
                                name: Identifier {
                                    name: "bar",
                                    location: <internal>:6:9,
                                },
                                value: Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            2,
                                                        ),
                                                    },
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:11:12,
                                        },
                                    ),
                                    location: <internal>:11:12,
                                },
                                location: <internal>:6:12,
                            },
                        ],
                        location: <internal>:0:16,
                    },
                ),
                location: <internal>:0:16,
            },
        ),
        location: <internal>:0:16,
    },
]
