compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@enum.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "/// This is a doc comment\n        enum Foo {\n            Bar\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Enum(
                EnumDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:39:42,
                            },
                            type_arguments: [],
                            location: <internal>:39:42,
                        },
                        location: <internal>:39:42,
                    },
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    visibility: Private,
                    cases: [
                        EnumDefinitionCase {
                            idx: 0,
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "Bar",
                                        location: <internal>:57:60,
                                    },
                                    type_arguments: [],
                                    location: <internal>:57:60,
                                },
                                location: <internal>:57:60,
                            },
                            parameters: [],
                            location: <internal>:57:60,
                        },
                    ],
                    location: <internal>:34:70,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
