compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@enum_case.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "enum Foo {\n            /// This is a doc comment\n            Bar\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Enum(
                EnumDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:5:8,
                            },
                            type_arguments: [],
                            location: <internal>:5:8,
                        },
                        location: <internal>:5:8,
                    },
                    visibility: Private,
                    cases: [
                        EnumDefinitionCase {
                            idx: 0,
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "Bar",
                                        location: <internal>:61:64,
                                    },
                                    type_arguments: [],
                                    location: <internal>:61:64,
                                },
                                location: <internal>:61:64,
                            },
                            parameters: [],
                            location: <internal>:61:64,
                        },
                    ],
                    location: <internal>:0:74,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
